--- a/changelogs/v3.9.0.md
+++ b/changelogs/v3.9.0.md
@@ -14,7 +14,7 @@ const pageLayout: PageLayout = {
         display: 'flex',
         justifyContent: 'center',
     }),
-    tranformSize: ({ size }) => ({ height: size.height + 30, width: size.width + 30 }),
+    transformSize: ({ size }) => ({ height: size.height + 30, width: size.width + 30 }),
 };
 
 <Viewer pageLayout={pageLayout} />;
